--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <div class="col-12 bg-primary text-white text-center py-3">
                 <h1>Header</h1>
             </div>
-            <div class="col-4 col-md-3 bg-secondary text-white text-center py-5 " style="height:100vh;">
+            <div class="col-4 col-md-3 bg-secondary text-white text-center py-5 vh-100" >
                 <h1>Sidebar</h1>
             </div>
             <div class="col-8 col-md-9 bg-warning text-dark text-center py-5 ">
