--- a/index.html
+++ b/index.html
@@ -1,28 +1,108 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LKPD 2</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Website Sederhana</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <div class="container-fluid">
-        <div class="row">
-            <div class="col-12 bg-primary text-white text-center py-3">
-                <h1>Header</h1>
-            </div>
-            <div class="col-4 col-md-3 bg-secondary text-white text-center py-5 vh-100" >
-                <h1>Sidebar</h1>
-            </div>
-            <div class="col-8 col-md-9 bg-warning text-dark text-center py-5 ">
-                <h1>Content</h1>
-            </div>
-            <div class="footer bg-dark text-white text-center py-3">
-                <h1>Footer</h1>
-            </div>
-        </div>
+      <a class="navbar-brand" href="#">MyWebsite</a>
+      
+      <button class="btn btn-outline-light d-lg-none" type="button" id="sidebarToggle">
+        ☰ Menu
+      </button>
     </div>
+  </nav>
+
+  <div class="container-fluid flex-grow-1">
+    <div class="row">
+      <!-- Sidebar -->
+      <nav id="sidebarMenu" class="col-md-3 col-lg-2 bg-light sidebar collapse">
+        <div class="position-sticky p-3">
+          <h5>Menu</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Beranda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tentang</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Layanan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Kontak</a>
+            </li>
+          </ul>
+        </div>
+      </nav> 
+      <nav  class="col-md-3 col-lg-2 bg-light sidebar d-none d-lg-block vh-100">
+        <div class="position-sticky p-3">
+          <h5>Menu</h5>
+          <ul class="nav flex-column">
+            <li class="nav-item">
+              <a class="nav-link active" href="#">Beranda</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Tentang</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Layanan</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Kontak</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+      <!-- Konten utama -->
+      <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4 py-4">
+        <h1>Selamat Datang</h1>
+        <p>Ini adalah contoh website sederhana dengan header, sidebar, konten utama, dan footer menggunakan Bootstrap.</p>
+
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Artikel 1</h5>
+            <p class="card-text">Isi artikel atau konten utama dapat diletakkan di sini.</p>
+          </div>
+        </div>
+
+        <div class="card mb-3">
+          <div class="card-body">
+            <h5 class="card-title">Artikel 2</h5>
+            <p class="card-text">Konten ini akan menyesuaikan dengan ukuran layar secara responsif.</p>
+          </div>
+        </div>
+      </main>
+    </div>
+  </div>
+
+  <!-- Footer -->
+  <footer class="bg-dark text-white text-center py-3 mt-auto">
+    <div class="container">
+      <p class="mb-0">&copy; 2025 Ghaizan</p>
+    </div>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    
+    document.getElementById("sidebarToggle").addEventListener("click", function () {
+      let sidebar = document.getElementById("sidebarMenu");
+      let bsCollapse = new bootstrap.Collapse(sidebar, {
+        toggle: false
+      });
+      if (sidebar.classList.contains("show")) {
+        bsCollapse.hide();
+      } else {
+        bsCollapse.show();
+      }
+    });
+  </script>
 </body>
 </html>
